<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_grain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".GrainListActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="34sp"
            android:textColor="@color/white"
            android:text="@string/grain_title" />

    </android.support.v7.widget.Toolbar>

    <GridLayout
        android:columnCount="4"
        android:rowCount="5"
        style="@style/GridLayout">

        <Button
            android:id="@+id/btn_grain_1"
            android:layout_column="1"
            android:layout_row="1"
            android:text="@string/grain_1"
            style="@style/Button.Grid" />

        <Button
            android:id="@+id/btn_grain_2"
            android:layout_column="2"
            android:layout_row="1"
            android:text="@string/grain_2"
            style="@style/Button.Grid" />

        <Button
            android:id="@+id/btn_grain_3"
            android:layout_column="3"
            android:layout_row="1"
            android:text="@string/grain_3"
            style="@style/Button.Grid" />

        <Button
            android:id="@+id/btn_grain_4"
            android:layout_column="1"
            android:layout_row="2"
            android:text="@string/grain_4"
            style="@style/Button.Grid" />

        <Button
            android:id="@+id/btn_grain_5"
            android:layout_column="2"
            android:layout_row="2"
            android:text="@string/grain_5"
            style="@style/Button.Grid" />

        <Button
            android:id="@+id/btn_grain_6"
            android:layout_column="3"
            android:layout_row="2"
            android:text="@string/grain_6"
            style="@style/Button.Grid" />

        <Button
            android:id="@+id/btn_grain_7"
            android:layout_column="1"
            android:layout_row="3"
            android:text="@string/grain_7"
            style="@style/Button.Grid" />

        <Button
            android:id="@+id/btn_grain_8"
            android:layout_column="2"
            android:layout_row="3"
            android:text="@string/grain_8"
            style="@style/Button.Grid" />

        <Button
            android:id="@+id/btn_grain_9"
            android:layout_column="3"
            android:layout_row="3"
            android:text="@string/grain_9"
            style="@style/Button.Grid" />

        <ImageButton
            android:id="@+id/btn_all_back"
            android:layout_column="1"
            android:layout_row="4"
            android:src="@drawable/ic_back"
            style="@style/Button.Back" />

        <ImageButton
            android:id="@+id/btn_all_clear"
            android:layout_column="2"
            android:layout_row="4"
            android:src="@drawable/ic_clear"
            style="@style/Button.Clear" />

    </GridLayout>

</LinearLayout>
