<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_meat"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".MeatListActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="34sp"
            android:textColor="@color/white"
            android:text="@string/meat_title" />

    </android.support.v7.widget.Toolbar>

    <GridLayout
        android:columnCount="4"
        android:rowCount="5"
        style="@style/GridLayout">

        <Button
            android:id="@+id/btn_meat_1"
            android:layout_column="1"
            android:layout_row="1"
            android:text="@string/meat_1"
            android:tag="@string/meat_1"
            style="@style/Button.Grid" />

        <Button
            android:id="@+id/btn_meat_2"
            android:layout_column="2"
            android:layout_row="1"
            android:text="@string/meat_2"
            android:tag="@string/meat_2"
            style="@style/Button.Grid" />

        <Button
            android:id="@+id/btn_meat_3"
            android:layout_column="3"
            android:layout_row="1"
            android:text="@string/meat_3"
            android:tag="@string/meat_3"
            style="@style/Button.Grid" />

        <Button
            android:id="@+id/btn_meat_4"
            android:layout_column="1"
            android:layout_row="2"
            android:text="@string/meat_4"
            android:tag="@string/meat_4"
            style="@style/Button.Grid" />

        <Button
            android:id="@+id/btn_meat_5"
            android:layout_column="2"
            android:layout_row="2"
            android:text="@string/meat_5"
            android:tag="@string/meat_5"
            style="@style/Button.Grid" />

        <Button
            android:id="@+id/btn_meat_6"
            android:layout_column="3"
            android:layout_row="2"
            android:text="@string/meat_6"
            android:tag="@string/meat_6"
            style="@style/Button.Grid" />

        <Button
            android:id="@+id/btn_meat_7"
            android:layout_column="1"
            android:layout_row="3"
            android:text="@string/meat_7"
            android:tag="@string/meat_7"
            style="@style/Button.Grid" />

        <Button
            android:id="@+id/btn_meat_8"
            android:layout_column="2"
            android:layout_row="3"
            android:text="@string/meat_8"
            android:tag="@string/meat_8"
            style="@style/Button.Grid" />

        <Button
            android:id="@+id/btn_meat_9"
            android:layout_column="3"
            android:layout_row="3"
            android:text="@string/meat_9"
            android:tag="@string/meat_9"
            style="@style/Button.Grid" />

        <ImageButton
            android:id="@+id/btn_all_back"
            android:layout_column="1"
            android:layout_row="4"
            android:src="@drawable/ic_back"
            style="@style/Button.Back" />

        <ImageButton
            android:id="@+id/btn_all_clear"
            android:layout_column="2"
            android:layout_row="4"
            android:src="@drawable/ic_clear"
            style="@style/Button.Clear" />

    </GridLayout>

</LinearLayout>
